Correction de collapse

--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -3,9 +3,7 @@
 .collapse {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     align-items: center;
-    margin: 0 auto;
     width: 84%;
     
     &__header {
@@ -65,15 +63,23 @@
         box-sizing: border-box;
         border-radius: 10px 10px 5px 5px;
         overflow: hidden;
-        margin-bottom: 30px;
-        
+
+        & ul {
+            list-style: none;
+            padding: 0 10px;
+            margin: 0;
+            & li {
+                padding-bottom: 3px;
+            }
+           }
+
             @media (max-width:768px) {
                 font-size: 12px;
             }
     }
 
     &__description-visible {
-        transition: all 0.6s ease-in-out;
+        transition: all 0.4s ease-in-out;
         width: 100%;
         max-height: 500px;
         padding: 20px 20px;
@@ -82,12 +88,11 @@
     &__description-hidden {
         transition: all 0.6s ease-in-out;
         max-height: 0px;
-        padding: 0px 20px; 
+        padding: 0px 20px;
     }
     
     @media (max-width:768px) {
         width: 100%;
-        height: 30px;
     }    
 }
 
