--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -8,13 +8,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    height: 100%;
+   
     &__logo {
         width: 122px;
-
-        @media (max-width :768px){
-            width: 122px;
-        }
     }    
 
     &__msg {
@@ -32,6 +29,6 @@
         }
     }
     @media (max-width :768px) {
-        padding:60px 0;
+        padding: 60px 0;   
     }
 }
